@@ -43,9 +43,9 @@
             "rct2.scenery_small.tus",
             "$DAT:0C58B401|IRETUS1C",
             "rct2.scenery_small.tbc",
-            "$DAT:09F55801|MG-RCT68",
+            "fidwell.scenery_small.tbc",
             "rct2.scenery_small.tsc",
-            "$DAT:09F55901|MG-RCT69",
+            "fidwell.scenery_small.tsc",
             "rct2.scenery_small.twf",
             "rct2.scenery_small.tsh0",
             "fidwell.scenery_small.tsh0",
