@@ -1,0 +1,42 @@
+{
+    "id": "fidwell.scenery_small.tsc",
+    "authors": ["Chris Sawyer", "Simon Foster"],
+    "version": "1.0",
+    "originalId": "09F55901|MG-RCT69|6940687C",
+    "sourceGame": "custom",
+    "objectType": "scenery_small",
+    "properties": {
+        "price": 9,
+        "removalPrice": 5,
+        "cursor": "CURSOR_TREE_DOWN",
+        "height": 44,
+        "shape": "1/4",
+        "isRotatable": true,
+        "isStackable": true,
+        "hasPrimaryColour": true
+    },
+    "images": [
+      { "path": "images/0.png", "x": -7, "y": -41 },
+      { "path": "images/1.png", "x": -7, "y": -41 },
+      { "path": "images/2.png", "x": -7, "y": -41 },
+      { "path": "images/3.png", "x": -8, "y": -41 }
+    ],
+    "strings": {
+        "name": {
+            "en-GB": "Cactus",
+            "de-DE": "Kaktus",
+            "sv-SE": "Kaktus",
+            "ko-KR": "선인장",
+            "zh-CN": "仙人掌",
+            "zh-TW": "仙人掌",
+            "pt-BR": "Cacto",
+            "cs-CZ": "Kaktus",
+            "ja-JP": "サボテン",
+            "pl-PL": "Kaktus",
+            "ru-RU": "Кактус",
+            "fr-FR": "Cactus",
+            "eo-ZZ": "Kakto",
+            "fi-FI": "Kaktus"
+        }
+    }
+}
