@@ -114,6 +114,8 @@
 - Updated object: Tree (rct2.scenery_small.ts5)
 - Updated object: Tree (rct2.scenery_small.ts6)
 - Updated object: Giraffe Statue (rct2.scenery_small.tgs)
+- Updated object: Cactus (rct2.scenery_small.tbc)
+- Updated object: Cactus (rct2.scenery_small.tsc)
 - Updated object: Roof (rct2.scenery_small.sumrf)
 - Updated object: Roman Colosseum (rct2.scenery_large.scol)
 - Updated object: Roman Column (rct2.scenery_small.trc)
